[package]
name = "rust-get-proxy-request"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.38"
warp = "0.3.7"
reqwest = { version = "0.12.5",features = ["blocking"] }
tokio = { version = "1.38.0", features = ["full"] }
urlencoding = "2.1.3"
serde_json = "1.0.120"
serde = { version = "1.0.204", features = ["derive"] }
regex = "1.10.5"
bytes = "1.6.1"
hyper = "1.4.1"
